[tool.poetry]
name = "python-data-processing-sample"
version = "0.1.0"
description = ""
authors = ["self-methods.com"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
notebook = "^6.4.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
